--- a/test/qs8-igemm-minmax.yaml
+++ b/test/qs8-igemm-minmax.yaml
@@ -6,9 +6,17 @@
   k-block: 8
 - name: xnn_qs8_igemm_minmax_ukernel_2x8__neon_mlal_lane
   k-block: 8
+- name: xnn_qs8_igemm_minmax_ukernel_4x8__neon_mlal_lane
+  k-block: 8
+- name: xnn_qs8_igemm_minmax_ukernel_3x8__neon_mlal_lane
+  k-block: 8
 - name: xnn_qs8_igemm_minmax_ukernel_1x16__neon_mlal_lane
   k-block: 8
 - name: xnn_qs8_igemm_minmax_ukernel_2x16__neon_mlal_lane
+  k-block: 8
+- name: xnn_qs8_igemm_minmax_ukernel_3x16__neon_mlal_lane
+  k-block: 8
+- name: xnn_qs8_igemm_minmax_ukernel_4x16__neon_mlal_lane
   k-block: 8
 - name: xnn_qs8_igemm_minmax_ukernel_1x8c4__neondot
   k-block: 8
